<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app level -->
    <string name="app_name">Cash Track</string>

    <!-- activity level -->
    <string name="title_activity_splash">Cash Track</string>
    <string name="title_activity_view_expenses">Expenses</string>
    <string name="title_activity_view_categories">Manage Categories</string>
    <string name="title_activity_view_users">Manage Users</string>
    <string name="title_activity_edit_exp">Edit Expense</string>
    <string name="title_view_all_expenses">Expenses - All</string>
    <string name="title_view_recent_expenses">Expenses - Recent</string>
    <string name="title_activity_editexp_edit">Edit Expense</string>
    <string name="title_activity_editexp_add">Add Expense</string>

    <!-- view level -->
    <string name="label_user">User name:</string>
    <string name="label_category">Category:</string>
    <string name="label_date">Date:</string>
    <string name="label_cost">Cost:</string>
    <string name="label_description">Description:</string>
    <string name="label_show">Show:</string>
    <string name="label_loading">Loading…</string>
    <string name="hint_cost">Cost</string>
    <string name="hint_description">Description (optional)</string>
    <string name="view_expenses">View Expenses</string>
    <string name="menu_man_categories">Manage Categories</string>
    <string name="menu_man_users">Manage Users</string>
    <string name="menu_export_data">Export Data</string>
    <string name="menu_exp_title">Action</string>
    <string name="menu_show_recent">Show Recent</string>
    <string name="menu_undo">Undo</string>

    <!-- fragment level -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="conf">OK</string>

    <!-- action bar level -->
    <string name="add">Add</string>
    <string name="edi">Edit</string>
    <string name="del">Delete</string>
    <string name="pick_user">Choose User</string>
    <string name="pick_date">Choose Date</string>
    <string name="show_all">Show All</string>


</resources>
