<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="name.mjs001.expensereport.ViewExpensesByTime" >
    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/add"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_show_recent"
        android:title="@string/menu_show_recent"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:checkable="true"
        />
    <item android:id="@+id/action_man_cats"
        android:title="@string/menu_man_categories"
        android:orderInCategory="4"
        android:showAsAction="never" />
    <item android:id="@+id/action_man_users"
        android:title="@string/menu_man_users"
        android:orderInCategory="5"
        android:showAsAction="never" />
    <item android:id="@+id/action_export_data"
        android:title="@string/menu_export_data"
        android:orderInCategory="6"
        android:showAsAction="never" />
</menu>
