<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/LinearLayoutStyle1"
    tools:context="com.simgeoapps.expensereport.EditExp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_user"
        />
    <Spinner
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_category"
        />
    <Spinner
        android:id="@+id/editCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        />
    <TextView
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_medium"
        android:text="yyyy/mm/dd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        />
    <AutoCompleteTextView
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textAutoComplete|textNoSuggestions"
        android:hint="@string/hint_description"
        android:imeOptions="actionNext"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_cost"
        />
    <AutoCompleteTextView
        android:id="@+id/editCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:hint="@string/hint_cost"
        android:imeOptions="actionDone"
        />

    <Button
        android:id="@+id/butOK"
        android:layout_width="1in"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_gravity="end"
        />
</LinearLayout>
